@@ -18,13 +18,13 @@ public class Crupier extends Jugador{
             System.out.println("No se puede mostrar el carta de crupier dado que no tiene ninguna.");
         }else{
             // System.out.println("La primera carta del crupier es: ");
-            System.out.printf("La primera carta del crupier es: %s de %s\n", getMano().getFirst().getValor(), getMano().getFirst().getPalo());
+            System.out.printf("La primera carta del crupier es: %s de %s\n", getMano().get(0).getValor(), getMano().get(0).getPalo());
             // Imprime la primera carta del crupier siendo que la segunda está oculta.
         }
     }
 
     // Ahora 'sobreescribo' el metodo mostrarMano() para que muestre la del crupier
-
+    @Override
     public void mostrarMano(){
         System.out.println("El crupier tiene:");
         for (Carta carta : getMano()) {
